# pixel-font-builder

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  publish.yml  python-package.yml  python-publish.yml  test.yaml  test.yml
assets/glyphs/: 0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  002A.txt  002B.txt  002C.txt  002D.txt  002E.txt  002F.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  003A.txt  003B.txt  003C.txt  003D.txt  003E.txt  003F.txt  0040.txt  0041.txt  0042.txt  0043.txt  0044.txt  0045.txt  0046.txt  0047.txt  (+57 more)
common/: font_service.py  path_define.py
common/services/: design_service.py
common/utils/: fs_util.py
examples/: __init__.py  create.py  demo.py
examples/services/: design_service.py  font_service.py
examples/utils/: fs_util.py  glyph_util.py
src/pixel_font_builder/: __init__.py  bdf.py  builder.py  font.py  glyph.py  info.py  meta.py  metric.py  opentype.py  os2.py  pcf.py
src/pixel_font_builder/bdf/: __init__.py  common.py  config.py
src/pixel_font_builder/dfont/: __init__.py  builder.py  common.py  config.py  resource.py
src/pixel_font_builder/opentype/: __init__.py  bitmap.py  common.py  config.py  feature.py  metric.py  name.py  outline.py  pen.py
src/pixel_font_builder/opentype/outline/: common.py
src/pixel_font_builder/opentype/outline/painter/: base.py  circle_dot.py  solid.py  square_dot.py
src/pixel_font_builder/opentype/outline/pen/: base.py  otf.py  ttf.py
src/pixel_font_builder/opentype/patch/: O_S_2f_2.py  _b_d_a_t.py  _b_h_e_d.py  _b_l_o_c.py  _g_l_y_f.py
src/pixel_font_builder/pcf/: __init__.py  common.py  config.py
tests/: test_.py  test_builder.py  test_collection_builder.py  test_demo.py  test_example.py  test_font_metric.py  test_glyph.py  test_line_metric.py  test_meta.py  test_metric.py
tests/bdf/: test_config.py
tests/dfont/: test_config.py
tests/opentype/: test_bounding_box.py  test_config.py  test_feature_file.py  test_fields_override.py
tests/opentype/outline/: test_circle_dot_outlines_painter.py  test_solid_outlines_painter.py  test_square_dot_outlines_painter.py
tests/pcf/: test_config.py
