[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "pixel-font-builder"
version = "0.0.40"
description = "A library that helps create pixel style fonts"
readme = "README.md"
license = "MIT"
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["font", "pixel"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fonttools[woff]>=4.60.1",
    "bdffont>=0.0.33",
    "pcffont>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/TakWolf/pixel-font-builder"
Source = "https://github.com/TakWolf/pixel-font-builder"
Issues = "https://github.com/TakWolf/pixel-font-builder/issues"
