[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "pixel-font-builder"
version = "0.0.47"
description = "A library that helps create pixel style fonts"
readme = "README.md"
license = "MIT"
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["font", "pixel"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fonttools[woff]>=4.61.1",
    "bdffont>=0.0.35",
    "pcffont>=0.0.24",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/TakWolf/pixel-font-builder"
Source = "https://github.com/TakWolf/pixel-font-builder"
Issues = "https://github.com/TakWolf/pixel-font-builder/issues"
