[project]
name = "pixel-font-builder"
version = "0.0.52"
description = "A library that helps create pixel style fonts"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["font", "pixel"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

dependencies = [
    "fonttools[woff]>=4.63.0",
    "bdffont>=0.0.40",
    "pcffont>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.urls]
Homepage = "https://github.com/TakWolf/pixel-font-builder"
Source = "https://github.com/TakWolf/pixel-font-builder"
Issues = "https://github.com/TakWolf/pixel-font-builder/issues"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
